--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@browserbasehq/stagehand": "^2.2.1",
+    "@types/morgan": "^1.9.10",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongodb": "^6.16.0",
+    "morgan": "^1.10.1",
     "pino": "^9.7.0",
     "zod": "^3.25.49"
   },
