--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.16.0",
     "morgan": "^1.10.1",
+    "node-appwrite": "^17.2.0",
     "pino": "^9.7.0",
     "zod": "^3.25.49"
   },
